# numerical_methods

./: CMakeLists.txt  README.md  eigen.cpp  eigen.h  linear_least_squares.cpp  linear_least_squares.h  main.cpp  matrix.cpp  matrix.h  nonlinear.cpp  nonlinear.h
